--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:client\"",
     "dev:api": "cd api &&  nodemon index.js",
     "dev:client": "cd client && npm run dev",
-    "start": "cd api && /root/.nvm/versions/node/v16.20.1/bin/node node_modules/nodemon/bin/nodemon.js index.js",
+    "start": "cd api && nodemon index.js",
 
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
